# pi-skills-platform

./: .dockerignore  .env.example  .gitignore  APPLICATION_STATUS.md  MCP_SERVER_CONSOLIDATION_PLAN.md  QUICK_START.md  README.md  STARTUP_GUIDE.md  STARTUP_STATUS.md  TASK_3.8_IMPLEMENTATION_SUMMARY.md  access_control_analysis.md  alembic.ini  claude.md  conftest.py  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.toml  requirements.txt  test_startup.py  tsconfig.json  verify_cost_calculation.py  vitest.config.ts
.claude/: launch.json
.github/agents/: progress-recorder.agent.md
.opencode/plans/: vibe-code-report.md
Snowflake/: RBAC_DDL.sql  SNOW_Admin_Login.sql  SNOW_Full_Setup.sql  SNOW_Governance.sql  SNOW_Users.sql
apps/ai_governance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/: Dockerfile  entrypoint.sh  main.py  requirements.txt
apps/mcp/: Dockerfile  __init__.py  config.py  main.py  requirements.txt  secretbox.py  security.py  session_store.py  snowflake_client.py  tool_registry.py
deployment/: ecosystem.config.js
deployment/docker/: api.dockerfile  docker-compose.yml  frontend.conf  mcp.dockerfile  nginx.conf  web.dockerfile
deployment/scripts/: clean-run-test-all.ps1  deploy.sh
docs/: architecture-diagram.html  client-demo-runbook.md
docs/tester/: README.md  auth-e2e.config.sample.json  auth-e2e.ps1  run-api-tests.js  run_api_tests.py  security-attacks.js  (+8 more)
scripts/: backend-dev.ps1  clean-start.ps1  mcp-dev.ps1  run-pytest.cmd
src/: App.tsx  index.css  store.ts  types.ts
(+236 files in other folders)
